--- a/dbkai7.html
+++ b/dbkai7.html
@@ -175,6 +175,11 @@
 		  <h4>Episode 26</h4>
 		  <p></p>
 		</div>
+		<div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4>Episode 27</h4>
+		  <p></p>
+		</div>
     </section>
 </div>
 </section>
