--- a/dbkai3.html
+++ b/dbkai3.html
@@ -37,7 +37,10 @@
 		 <h1><a href="dbkai.html"><img src="images/dbkai1.jpg" alt="dbz kai season 1" width="192" height="192"></a>
 		 <a href="dbkai2.html"><img src="images/dbkai2.jpg" alt="dbz kai season 2" width="192" height="192"></a>
 		 <a href="dbkai3.html"><img src="images/dbkai3.jpg" alt="dbz kai season 3" width="192" height="192"></a>
-		 <a href="dbkai4.html"><img src="images/dbkai4.jpg" alt="dbz kai season 4" width="192" height="192"></a></h1>
+		 <a href="dbkai4.html"><img src="images/dbkai4.jpg" alt="dbz kai season 4" width="192" height="192"></a>
+		 <a href="dbkai5.html"><img src="images/dbkai5.jpg" alt="dbz kai season 5" width="192" height="192"></a>
+		 <a href="dbkai6.html"><img src="images/dbkai6.jpg" alt="dbz kai season 6" width="192" height="192"></a>
+		 <a href="dbkai7.html"><img src="images/dbkai7.jpg" alt="dbz kai season 7" width="192" height="192"></a></h1>
 	  </div>
 	<div>
 	<section>
